# zotero-mcp

./: README.md  pyproject.toml
.tak/: .gitignore  config.json
.tak/tasks/: 075822fe1b914fed.json  117f6cfe70be4b50.json  2396d1d6f78a3adb.json  327d18dd255bc7fb.json  371f055ed3d260bd.json  3c057d65711d2325.json  485a8eccf1d2cc89.json  749d2688d4d53682.json  759e9e0940594d85.json  76d18d4a0f8b6243.json  95f79e0dface8f8c.json  a579c9dfe83c0c83.json  b8754c881e843091.json  c044fc7d92241bd7.json  ca08d0b5cf165723.json  d9a3c67e632944f1.json  da425d1c806701fe.json  e8e2b07273a3d9d8.json  f91b5d7d35b9e67b.json  fb9a7593fd1f9e55.json
docs/: getting-started.md
src/zotero_mcp/: __init__.py  better_bibtex_client.py  chroma_client.py  cli.py  client.py  local_db.py  pdfannots_downloader.py  pdfannots_helper.py  semantic_search.py  server.py  setup_helper.py  setup_tui.py  updater.py  utils.py
src/zotero_mcp/services/: annotations.py  content.py
tests/: test_chatgpt_wrappers.py  test_search_notes.py  test_services_annotations.py  test_services_content.py
