[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zotero-mcp"
dynamic = ["version"]
authors = [
  { name = "54yyyu", email = "54yyyu@github.com" },
]
description = "A Model Context Protocol server for Zotero"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyzotero>=1.5.0",
    "mcp>=1.2.0",
    "python-dotenv>=1.0.0",
    "markitdown[pdf]",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "fastmcp>=2.14.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
    "google-genai>=0.7.0",
    "typer>=0.21.1",
]


[project.urls]
"Homepage" = "https://github.com/54yyyu/zotero-mcp"
"Bug Tracker" = "https://github.com/54yyyu/zotero-mcp/issues"

[project.scripts]
zotero-mcp = "zotero_mcp.cli:main"

[tool.hatch.version]
path = "src/zotero_mcp/_version.py"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.15",
    "pytest>=7.0.0",
    "pytest-cov>=7.0.0",
]
